Fix scrollbar, colors, make UI simpler (#312)
* Fix scrollbar, colors, make UI simpler

* Update src/app/svg-graphics-view/svg-graphics-view.component.ts


---------

--- a/src/app/add-transformations/add-transformations.component.css
+++ b/src/app/add-transformations/add-transformations.component.css
@@ -5,8 +5,8 @@
   justify-content: center;
   opacity: 0.33;
   width: 1ex;
-  transition:
-    opacity 0.4s;
+  transition: opacity 0.4s;
+  background-color: color-mix(in srgb, var(--accent) 70%, gray 30%);
 }
 
 :host:hover {
